Bug 215413 - Invalid early errors for class methods named "constructor" and "prototype"
Summary: Invalid early errors for class methods named "constructor" and "prototype"
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Trivial
Assignee: Alexey Shvayka
URL:
Keywords: InRadar, WebExposed
Depends on:
Blocks:
 
Reported: 2020-08-12 08:55 PDT by Alexey Shvayka
Modified: 2020-08-20 14:37 PDT (History)
9 users (show)

See Also:


Attachments
Patch (6.68 KB, patch)
2020-08-12 08:58 PDT, Alexey Shvayka
no flags Details | Formatted Diff | Diff
Patch (8.26 KB, patch)
2020-08-20 14:06 PDT, Alexey Shvayka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Shvayka 2020-08-12 08:55:45 PDT
Incorrect early errors for class methods named "constructor" and "prototype"
Comment 1 Alexey Shvayka 2020-08-12 08:58:00 PDT
Created attachment 406458 [details]
Patch
Comment 2 Alexey Shvayka 2020-08-12 09:06:37 PDT
"prototype" instance method tests are coming in https://github.com/tc39/test262/pull/2724: I will make sure to sync test262 first.

Test coverage for r181404 (removed FIXME): JSTests/test262/test/language/expressions/class/elements/syntax/early-errors/grammar-special-meth-contains-super-*.js.
Comment 3 Radar WebKit Bug Importer 2020-08-19 08:56:25 PDT
<rdar://problem/67406058>
Comment 4 Alexey Shvayka 2020-08-20 14:06:43 PDT
Created attachment 406965 [details]
Patch

Rebase on top of synced test262 suites.
Comment 5 EWS 2020-08-20 14:37:44 PDT
Committed r265966: <https://trac.webkit.org/changeset/265966>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 406965 [details].