Invalid early errors for class methods named "constructor" and "prototype" https://bugs.webkit.org/show_bug.cgi?id=215413

Reviewed by Darin Adler.

JSTests:

* test262/expectations.yaml: Mark 24 test cases as passing.

Source/JavaScriptCore:

This change removes invalid early syntax errors, allowing static async/generator
methods named "constructor" and instance async/generator methods named "prototype",
which aligns JSC with the spec [1], V8, and SpiderMonkey.

Also, removes a FIXME related to super() calls outside constructor that was
resolved in r181404 and is covered by test262 suite.

[1]: https://tc39.es/ecma262/#sec-class-definitions-static-semantics-early-errors

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseClass):


Canonical link: https://commits.webkit.org/228464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265966 268f45cc-cd09-0410-ab3c-d52691b4dbfc